| Summary: | ASTERISK-24741: dtls_handler causes Asterisk to crash | ||
| Reporter: | Zane Conkle (zconkle) | Labels: | |
| Date Opened: | 2015-01-30 15:58:03.000-0600 | Date Closed: | 2015-02-11 12:03:39.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | 13.1.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) backtrace.txt ( 1) dtls_handler-coredump.txt | |
| Description: | dtls_handler caused asterisk to crash and create the attached coredump file. | ||
| Comments: | By: Kevin Harwell (kharwell) 2015-02-05 12:02:42.921-0600 Hey Zane, I've been looking into this issue and trying to duplicate it. Unfortunately, I have not been able to reproduce the problem (outside the one time it occurred for me). Does this happen regularly for you? Do you have any other information available that might help? For instance logs, pjsip.conf (or other confs that might be relevant)? Were you using realtime when the crash occurred? Thanks! By: Kevin Harwell (kharwell) 2015-02-05 12:08:15.558-0600 Also did this happen for you on startup? Reload? If reload what kind? Module reload, "core reload", "core restart now", etc...? By: Zane Conkle (zconkle) 2015-02-05 13:31:39.014-0600 Hey Kevin. It has only happened once. We were not performing a reload of any kind. Unfortunately, I do not have any logs to provide from that time period; they have been rotated. We were using realtime when this happened, including PJSIP from the database. | ||